user created w/o framework, compose file edition, company model added
